--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,1 +1,31 @@
-<header class="header"></header>
+<header class="header">
+  <div class="container">
+    <div class="header__wrapper netbook-hidden">
+      <a href="#" class="header__link is-active">Начало</a>
+      <a href="#" class="header__link">О нас</a>
+      <a href="#" class="header__link">Услуги</a>
+      <a href="#" class="header__link">Технологии</a>
+      <a href="#" class="header__link">Команда</a>
+      <a href="#" class="header__link">Кейсы</a>
+      <a href="#" class="header__link">Отзывы</a>
+      <a href="#" class="header__link">Контакты</a>
+    </div>
+    <div class="header__mobile-wrapper netbook-visible">
+      <div class="header__mobile-wrapper-top">
+        <img src="./img/mobile-header-left.svg" />
+        <div class="header__mobile-wrapper-plus">+</div>
+        <img src="./img/mobile-header-right.svg" />
+      </div>
+      <div class="header__mobile-wrapper-nav">
+        <a href="#" class="header__link is-active">Начало</a>
+        <a href="#" class="header__link">О нас</a>
+        <a href="#" class="header__link">Услуги</a>
+        <a href="#" class="header__link">Технологии</a>
+        <a href="#" class="header__link">Команда</a>
+        <a href="#" class="header__link">Кейсы</a>
+        <a href="#" class="header__link">Отзывы</a>
+        <a href="#" class="header__link">Контакты</a>
+      </div>
+    </div>
+  </div>
+</header>
