--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,3 +1,65 @@
 <footer class="footer">
- 
+  <div class="container footer__container">
+    <div class="footer__wrapper">
+      <div class="footer__form-col">
+        <form action="#" class="callback-form">
+          <label class="form-input is-required">
+            <input type="text" class="input" placeholder=" " />
+            <div class="form-input__placeholder">Имя</div>
+          </label>
+          <label class="form-input is-required">
+            <input type="text" class="input" placeholder=" " />
+            <div class="form-input__placeholder">Телефон</div>
+          </label>
+          <label class="form-input">
+            <input type="text" class="input" placeholder=" " />
+            <div class="form-input__placeholder">Почта</div>
+          </label>
+          <label class="form-input is-textarea">
+            <textarea class="input textarea" placeholder=" "></textarea>
+            <div class="form-input__placeholder">Описание запроса</div>
+          </label>
+          <label class="form-input">
+            <div class="file-input">
+              <input type="file" placeholder="Приложить файл" />
+              <div class="file-input__button button is-ghost">
+                <span class="file-input__plus">+</span> <span class="file-input__name">Приложить файл</span>
+              </div>
+            </div>
+          </label>
+          <label class="checkbox-input">
+            <input type="checkbox" name="privacy" />
+            <div class="checkbox-input__check">
+              <div class="checkbox-input__check-icon">
+                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 5H9" stroke="#060910" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M5 9L5 1" stroke="#060910" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </div>
+            </div>
+            <div class="checkbox-input__placeholder">
+              Согласие на обработку личных данных в соответствии с
+              <a href="#" target="_blank">политика конфиденциальности</a>
+            </div>
+          </label>
+          <button type="submit" class="button is-black">Отправить</button>
+        </form>
+      </div>
+      <div class="footer__contacts-col">
+        <img src="./img/footer-logo.svg" alt="gap-dev" class="footer__logo"/>
+        <div class="footer__contacts-box">
+          <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
+          <a href="tel:+79254702362" class="is-underline-in">+7(925)470-23-62</a>
+          <a href="https://t.me/" class="is-underline-in">Telegram</a>
+          <a href="https://wa.me/" class="is-underline-in">Whatsapp</a>
+        </div>
+        <div class="footer__contacts-box">
+          <a href="#" class="is-underline-in">IT-consulting</a>
+          <a href="#" class="is-underline-in">Разработка сайтов</a>
+          <a href="#" class="is-underline-in">Разработка мобильных приложений</a>
+        </div class="footer__contacts-box">
+        <div class="footer__contacts-box">© GAPDEV 2024</div>
+      </div>
+    </div>
+  </div>
 </footer>
