--- a/src/blocks/modules/company-section/company-section.html
+++ b/src/blocks/modules/company-section/company-section.html
@@ -82,6 +82,11 @@
           </div>
         </div>
       </div>
+      <div class="company-section__rock">
+        <img src="./img/flying-rock-1.png" class="rock-1" />
+        <img src="./img/flying-rock-2.png" class="rock-2" />
+        <img src="./img/flying-rock-3.png" class="rock-3" />
+      </div>
     </div>
   </div>
 </section>
