--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
   <div class="container footer__container">
     <div class="footer__wrapper">
       <div class="footer__form-col">
