--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,14 +1,14 @@
 <header class="header">
   <div class="container">
     <div class="header__wrapper netbook-hidden">
-      <a href="#" class="header__link is-active">Начало</a>
-      <a href="#" class="header__link">О нас</a>
-      <a href="#" class="header__link">Услуги</a>
-      <a href="#" class="header__link">Технологии</a>
-      <a href="#" class="header__link">Команда</a>
-      <a href="#" class="header__link">Кейсы</a>
-      <a href="#" class="header__link">Отзывы</a>
-      <a href="#" class="header__link">Контакты</a>
+      <a href="#start" class="header__link is-active">Начало</a>
+      <a href="#about" class="header__link">О нас</a>
+      <a href="#services" class="header__link">Услуги</a>
+      <a href="#technology" class="header__link">Технологии</a>
+      <a href="#why" class="header__link">Почему мы?</a>
+      <a href="#team" class="header__link">Команда</a>
+      <a href="#reviews" class="header__link">Отзывы</a>
+      <a href="#contacts" class="header__link">Контакты</a>
     </div>
     <div class="header__mobile-wrapper netbook-visible">
       <div class="header__mobile-wrapper-top">
@@ -17,14 +17,14 @@
         <img src="./img/mobile-header-right.svg" />
       </div>
       <div class="header__mobile-wrapper-nav">
-        <a href="#" class="header__link is-active">Начало</a>
-        <a href="#" class="header__link">О нас</a>
-        <a href="#" class="header__link">Услуги</a>
-        <a href="#" class="header__link">Технологии</a>
-        <a href="#" class="header__link">Команда</a>
-        <a href="#" class="header__link">Кейсы</a>
-        <a href="#" class="header__link">Отзывы</a>
-        <a href="#" class="header__link">Контакты</a>
+        <a href="#start" class="header__link">Начало</a>
+        <a href="#about" class="header__link">О нас</a>
+        <a href="#services" class="header__link">Услуги</a>
+        <a href="#technology" class="header__link">Технологии</a>
+        <a href="#why" class="header__link">Почему мы?</a>
+        <a href="#team" class="header__link">Команда</a>
+        <a href="#reviews" class="header__link">Отзывы</a>
+        <a href="#contacts" class="header__link">Контакты</a>
       </div>
     </div>
   </div>
