--- a/src/blocks/modules/reviews-section/reviews-section.html
+++ b/src/blocks/modules/reviews-section/reviews-section.html
@@ -1,4 +1,4 @@
-<section class="reviews-section">
+<section class="reviews-section" id="reviews">
   <div class="reviews-section__wrapper">
     <div class="section-title h2 is-center">Отзывы</div>
     <div class="container">
