--- a/src/blocks/modules/services-section/services-section.html
+++ b/src/blocks/modules/services-section/services-section.html
@@ -1,4 +1,4 @@
-<section class="services-section">
+<section class="services-section" id="services">
   <div class="services-section__wrapper">
     <div class="container">
       <div class="section-title h2">Услуги</div>
@@ -7,7 +7,104 @@
           <div class="service-row__box">
             <div class="service-row__line">
               <div class="service-row__line-box">
-                <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+              </div>
+              <div class="service-row__line-box">
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Разработка сайтов</span> <img src="./img/service-line-separator.svg" />
+                </div>
               </div>
             </div>
 
@@ -60,7 +157,62 @@
           <div class="service-row__box">
             <div class="service-row__line">
               <div class="service-row__line-box">
-                <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+              </div>
+              <div class="service-row__line-box">
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>IT-consulting</span> <img src="./img/service-line-separator.svg" />
+                </div>
               </div>
             </div>
 
@@ -96,7 +248,74 @@
           <div class="service-row__box">
             <div class="service-row__line">
               <div class="service-row__line-box">
-                <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+              </div>
+              <div class="service-row__line-box">
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
+                <div class="service-row__line-box-item">
+                  <span>Mobile (iOS, Android)</span> <img src="./img/service-line-separator.svg" />
+                </div>
               </div>
             </div>
 
