--- a/src/blocks/modules/start-section/start-section.html
+++ b/src/blocks/modules/start-section/start-section.html
@@ -1,4 +1,4 @@
-<section class="start-section">
+<section class="start-section" id="start">
   <div class="container">
     <div class="start-section__wrapper">
       <div class="start-section__top">
