--- a/src/blocks/modules/why-section/why-section.html
+++ b/src/blocks/modules/why-section/why-section.html
@@ -1,4 +1,4 @@
-<section class="why-section">
+<section class="why-section" id="why">
   <div class="container">
     <div class="why-section__wrapper">
       <div><div class="section-title h2">Почему мы?</div></div>
