--- a/src/blocks/modules/start-section/start-section.html
+++ b/src/blocks/modules/start-section/start-section.html
@@ -1,4 +1,4 @@
-<section class="start-section" id="start">
+<section class="navigate-section start-section" id="start">
   <div class="container">
     <div class="start-section__wrapper">
       <div class="start-section__top">
@@ -25,7 +25,14 @@
       </div>
       <div class="start-section-logo">
         <div class="start-section-logo__text-box">
-          <svg width="484" height="155" viewBox="0 0 484 155" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg
+            class="mobile-hidden"
+            width="484"
+            height="155"
+            viewBox="0 0 484 155"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
               d="M483.05 154.174H439V0H483.05V12.681H451.586V141.493H483.05V154.174Z"
               fill="#F9AF9C"
@@ -44,8 +51,44 @@
               fill="white"
             />
           </svg>
+          <svg
+            class="mobile-visible"
+            width="350"
+            height="103"
+            viewBox="0 0 350 103"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M67.9552 51.194V62.5704H89.487C85.416 78.8893 70.6986 91.0115 53.2064 91.0115H48.7264C28.107 91.0115 11.3259 74.1617 11.3259 53.444V48.944C11.3259 28.2325 28.1008 11.3764 48.7264 11.3764H53.2064C65.1615 11.3764 76.1162 16.913 83.2515 26.5703L92.3436 19.7887C83.1885 7.401 68.553 0 53.2064 0H48.7264C21.8589 0 0 21.9565 0 48.944V53.444C0 80.4314 21.8589 102.388 48.7264 102.388H53.2064C68.2195 102.388 81.6595 95.5305 90.607 84.7734V102.388H101.933V51.194H67.9552Z"
+              fill="white"
+            />
+            <path
+              d="M324.373 0H248.968V102.388H260.193V56.8822H324.373C338.505 56.8822 349.999 45.234 349.999 30.9123V25.9699C349.999 11.6482 338.505 0 324.373 0ZM338.773 30.9123C338.773 38.958 332.312 45.5057 324.373 45.5057H260.193V11.3764H324.373C332.312 11.3764 338.773 17.9242 338.773 25.9699V30.9123Z"
+              fill="white"
+            />
+            <path
+              d="M222.807 102.388H235.437L184.59 0H166.31L115.463 102.388H128.093L142.217 73.9468H208.683L222.807 102.388ZM147.867 62.5704L175.45 7.02811L203.033 62.5704H147.867Z"
+              fill="white"
+            />
+          </svg>
         </div>
         <div class="start-section-logo__center">
+          <svg
+            class="mobile-visible"
+            width="45"
+            height="155"
+            viewBox="0 0 45 155"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              class="start-section-logo__bracket is-bracket-left"
+              d="M44.0497 154.174H0V0H44.0497V12.681H12.5856V141.493H44.0497V154.174Z"
+              fill="#F9AF9C"
+            />
+          </svg>
+
           <div class="start-section-logo__center-shine netbook-hidden">
             <div class="start-section-logo__center-shine-container">
               <svg
@@ -116,9 +159,30 @@
           <img src="./img/main-logo-center-2-1.png" alt="" />
           <img src="./img/main-logo-center-3-1.png" alt="" />
           <img src="./img/main-logo-center-4-1.png" alt="" />
+          <svg
+            class="mobile-visible"
+            width="45"
+            height="155"
+            viewBox="0 0 45 155"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              class="start-section-logo__bracket is-bracket-right"
+              d="M44.9999 154.174H0.950195V141.493H32.4142V12.681H0.950195V0H44.9999V154.174Z"
+              fill="#9E97C1"
+            />
+          </svg>
         </div>
         <div class="start-section-logo__text-box">
-          <svg width="477" height="155" viewBox="0 0 477 155" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg
+            class="mobile-hidden"
+            width="477"
+            height="155"
+            viewBox="0 0 477 155"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
               d="M44.0497 154.174H0V141.493H31.464V12.681H0V0H44.0497V154.174Z"
               fill="#9E97C1"
@@ -134,6 +198,27 @@
             />
             <path
               d="M462.506 21.0226L406.918 133.658L351.331 21.0226H337.34L393.665 135.151H406.181H407.655H420.172L476.497 21.0226H462.506Z"
+              fill="white"
+            />
+          </svg>
+          <svg
+            class="mobile-visible"
+            width="350"
+            height="105"
+            viewBox="0 0 350 105"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M53.901 104.477H0V7.62939e-06H53.901C81.1192 7.62939e-06 103.263 22.4046 103.263 49.9428V54.5347C103.263 82.0729 81.1192 104.477 53.901 104.477ZM11.4737 92.8689H53.901C74.7895 92.8689 91.7898 75.6752 91.7898 54.5347V49.9428C91.7898 28.8087 74.7959 11.6086 53.901 11.6086H11.4737V92.8689Z"
+              fill="white"
+            />
+            <path
+              d="M212.012 11.6086V0H114.231V104.477H212.012V92.8689H125.735V58.043H212.012V46.4344H125.735V11.6086H212.012Z"
+              fill="white"
+            />
+            <path
+              d="M337.229 0L286.488 103.11L235.748 0H222.977L274.39 104.477H285.815H287.161H298.586L350 0H337.229Z"
               fill="white"
             />
           </svg>
