--- a/src/blocks/modules/team-section/team-section.html
+++ b/src/blocks/modules/team-section/team-section.html
@@ -1,4 +1,4 @@
-<section class="team-section" id="team">
+<section class="navigate-section team-section" id="team">
   <div class="team-section__wrapper">
     <div class="team-section__wrapper-top">
       <div class="section-title h2">Команда</div>
