--- a/src/blocks/modules/technology-section/technology-section.html
+++ b/src/blocks/modules/technology-section/technology-section.html
@@ -1,4 +1,4 @@
-<section class="technology-section" id="technology">
+<section class="navigate-section technology-section" id="technology">
   <div class="container">
     <div class="technology-section__wrapper">
       <div><div class="section-title is-black h2">Технологии</div></div>
