--- a/src/blocks/modules/company-section/company-section.html
+++ b/src/blocks/modules/company-section/company-section.html
@@ -1,4 +1,4 @@
-<section class="company-section" id="about">
+<section class="company-section navigate-section" id="about">
   <div class="company-section__sky"></div>
   <div class="container">
     <div class="company-section__wrapper">
