--- a/src/blocks/modules/services-section/services-section.html
+++ b/src/blocks/modules/services-section/services-section.html
@@ -1,4 +1,4 @@
-<section class="services-section" id="services">
+<section class="services-section navigate-section" id="services">
   <div class="services-section__wrapper">
     <div class="container">
       <div class="section-title h2">Услуги</div>
