--- a/src/blocks/modules/start-section/start-section.html
+++ b/src/blocks/modules/start-section/start-section.html
@@ -7,7 +7,7 @@
             <h1>Экспертная разработка WEB и Mobile проектов для среднего бизнеса по справедливой цене</h1>
           </div>
 
-          <div class="start-section__title-subtext">
+          <div class="start-section__title-subtext netbook-hidden">
             Качественная работа над проектом от аналитики до релиза готового продукта с последующей поддержкой
           </div>
         </div>
@@ -158,7 +158,7 @@
           <img src="./img/main-logo-center-1-1.png" alt="" class="is-active" />
           <img src="./img/main-logo-center-2-1.png" alt="" />
           <img src="./img/main-logo-center-3-1.png" alt="" />
-          <img src="./img/main-logo-center-4-1.png" alt="" />
+          <!-- <img src="./img/main-logo-center-4-1.png" alt="" /> -->
           <svg
             class="mobile-visible"
             width="45"
@@ -230,12 +230,15 @@
             Уникальный подход к реализации вашего проекта, благодаря широкой экспертизе в различных бизнес доменах
           </div>
         </div>
-        <div class="start-section__bottom-links netbook-visible">
+        <div class="start-section__title-subtext netbook-visible">
+          Качественная работа над проектом от аналитики до релиза готового продукта с последующей поддержкой
+        </div>
+        <!--  <div class="start-section__bottom-links netbook-visible">
           <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
           <div class="start-section__top-links-separator"></div>
           <a href="https://t.me/" class="is-underline-in">telegram</a>
           <a href="https://wa.me/" class="is-underline-in">whatsapp</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
