--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,6 +1,9 @@
 <footer class="navigate-section footer" id="contacts">
   <div class="container footer__container">
     <div class="footer__wrapper">
+      <div class="footer__contacts-col tablet-visible">
+        <img src="./img/footer-logo.svg" alt="gap-dev" class="footer__logo"/>
+      </div>
       <div class="footer__form-col">
         <form action="#" class="callback-form">
           <label class="form-input is-required">
@@ -46,7 +49,7 @@
         </form>
       </div>
       <div class="footer__contacts-col">
-        <img src="./img/footer-logo.svg" alt="gap-dev" class="footer__logo"/>
+        <img src="./img/footer-logo.svg" alt="gap-dev" class="footer__logo tablet-hidden"/>
         <div class="footer__contacts-box">
           <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
           <a href="tel:+79254702362" class="is-underline-in">+7(925)470-23-62</a>
@@ -54,9 +57,9 @@
           <a href="https://wa.me/" class="is-underline-in">Whatsapp</a>
         </div>
         <div class="footer__contacts-box">
-          <a href="#" class="is-underline-in">IT-consulting</a>
           <a href="#" class="is-underline-in">Разработка сайтов</a>
           <a href="#" class="is-underline-in">Разработка мобильных приложений</a>
+          <a href="#" class="is-underline-in">IT-consulting</a>
         </div class="footer__contacts-box">
         <div class="footer__contacts-box">© GAPDEV 2024</div>
       </div>
