--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -25,6 +25,12 @@
         <a href="#team" class="header__link">Команда</a>
         <a href="#reviews" class="header__link">Отзывы</a>
         <a href="#contacts" class="header__link">Контакты</a>
+        <div class="header__mobile-wrapper-box">
+          <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
+          <a href="+7(925)470-23-62" class="header__link">+7(925)470-23-62</a>
+          <a href="https://t.me/" class="is-underline-in">telegram</a>
+          <a href="https://wa.me/" class="is-underline-in">whatsapp</a>
+        </div>
       </div>
     </div>
   </div>
