--- a/src/blocks/modules/services-section/services-section.html
+++ b/src/blocks/modules/services-section/services-section.html
@@ -54,6 +54,13 @@
                     <div class="service-row__grid-item-text">индивидуально</div>
                   </div>
                 </div>
+                <button
+                  type="button"
+                  class="button is-ghost-white service-row__content-right-button"
+                  data-popup="order"
+                >
+                  Заказать
+                </button>
               </div>
             </div>
           </div>
@@ -92,6 +99,13 @@
                     <div class="service-row__grid-item-text">от 60 рабочих дней</div>
                   </div>
                 </div>
+                <button
+                  type="button"
+                  class="button is-ghost-white service-row__content-right-button"
+                  data-popup="order"
+                >
+                  Заказать
+                </button>
               </div>
             </div>
           </div>
@@ -130,6 +144,13 @@
                     <div class="service-row__grid-item-text">от 3 месяцев</div>
                   </div>
                 </div>
+                <button
+                  type="button"
+                  class="button is-ghost-white service-row__content-right-button"
+                  data-popup="order"
+                >
+                  Заказать
+                </button>
               </div>
             </div>
           </div>
