--- a/src/blocks/modules/team-section/team-section.html
+++ b/src/blocks/modules/team-section/team-section.html
@@ -3,7 +3,7 @@
     <div class="team-section__wrapper-top">
       <div class="section-title h2">Команда</div>
       <div class="team-section__wrapper-top-text">
-        Более 10-ти лет наши специалисты сокращаю пропасть между клиентами и разработкой.
+        Более 10-ти лет наши специалисты сокращают пропасть между клиентами и разработкой.
       </div>
     </div>
 
