--- a/src/blocks/modules/head/head.html
+++ b/src/blocks/modules/head/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Project name</title>
+  <title>GAP-DEV</title>
   <meta name="theme-color" content="#fff" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta
