--- a/src/blocks/modules/start-section/start-section.html
+++ b/src/blocks/modules/start-section/start-section.html
@@ -19,7 +19,7 @@
             <a href="https://wa.me/" class="is-underline-in">whatsapp</a>
           </div>
           <div>
-            <button type="button" class="button is-primary">Стать клиентом</button>
+            <button type="button" class="button is-primary" data-popup="order">Стать клиентом</button>
           </div>
         </div>
       </div>
