--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -11,7 +11,7 @@
             <div class="form-input__placeholder">Имя</div>
           </label>
           <label class="form-input is-required">
-            <input type="text" class="input" placeholder=" " />
+            <input type="text" class="input" placeholder=" " data-maska />
             <div class="form-input__placeholder">Телефон</div>
           </label>
           <label class="form-input">
@@ -53,13 +53,13 @@
         <div class="footer__contacts-box">
           <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
           <a href="tel:+79254702362" class="is-underline-in">+7(925)470-23-62</a>
-          <a href="https://t.me/" class="is-underline-in">Telegram</a>
-          <a href="https://wa.me/" class="is-underline-in">Whatsapp</a>
+          <a href="https://t.me/gapdev_ru" class="is-underline-in">Telegram</a>
+          <!-- <a href="https://wa.me/" class="is-underline-in">Whatsapp</a> -->
         </div>
         <div class="footer__contacts-box">
-          <a href="#" class="is-underline-in">Разработка сайтов</a>
-          <a href="#" class="is-underline-in">Разработка мобильных приложений</a>
-          <a href="#" class="is-underline-in">IT-consulting</a>
+          <a href="#website-development-service" class="is-underline-in js-navigate-link" data-header-offset="true">Разработка сайтов</a>
+          <a href="#mobile-development-service" class="is-underline-in js-navigate-link" data-header-offset="true">Разработка мобильных приложений</a>
+          <a href="#it-consulting-service" class="is-underline-in js-navigate-link" data-header-offset="true">IT-consulting</a>
         </div class="footer__contacts-box">
         <div class="footer__contacts-box">© GAPDEV 2024</div>
       </div>
