--- a/src/blocks/modules/services-section/services-section.html
+++ b/src/blocks/modules/services-section/services-section.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="section-title h2">Услуги</div>
       <div class="service-row__container">
-        <div class="service-row">
+        <div class="service-row" id="website-development-service">
           <div class="service-row__box">
             <div class="service-row__line">
               <div class="service-row__line-box">
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="service-row">
+        <div class="service-row" id="mobile-development-service">
           <div class="service-row__box">
             <div class="service-row__line">
               <div class="service-row__line-box">
@@ -110,7 +110,7 @@
             </div>
           </div>
         </div>
-        <div class="service-row">
+        <div class="service-row" id="it-consulting-service">
           <div class="service-row__box">
             <div class="service-row__line">
               <div class="service-row__line-box">
