--- a/src/blocks/modules/start-section/start-section.html
+++ b/src/blocks/modules/start-section/start-section.html
@@ -15,8 +15,8 @@
           <div class="start-section__top-links">
             <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
             <div class="start-section__top-links-separator"></div>
-            <a href="https://t.me/" class="is-underline-in">telegram</a>
-            <a href="https://wa.me/" class="is-underline-in">whatsapp</a>
+            <a href="https://t.me/gapdev_ru" class="is-underline-in">telegram</a>
+            <!-- <a href="https://wa.me/" class="is-underline-in">whatsapp</a> -->
           </div>
           <div>
             <button type="button" class="button is-primary" data-popup="order">Стать клиентом</button>
