--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,14 +1,14 @@
 <header class="header">
   <div class="container">
     <div class="header__wrapper netbook-hidden">
-      <a href="#start" class="header__link is-active">Начало</a>
-      <a href="#about" class="header__link">О нас</a>
-      <a href="#services" class="header__link">Услуги</a>
-      <a href="#technology" class="header__link">Технологии</a>
-      <a href="#why" class="header__link">Почему мы?</a>
-      <a href="#team" class="header__link">Команда</a>
-      <a href="#reviews" class="header__link">Отзывы</a>
-      <a href="#contacts" class="header__link">Контакты</a>
+      <a href="#start" class="header__link js-navigate-link">Начало</a>
+      <a href="#about" class="header__link js-navigate-link">О нас</a>
+      <a href="#services" class="header__link js-navigate-link">Услуги</a>
+      <a href="#technology" class="header__link js-navigate-link">Технологии</a>
+      <a href="#why" class="header__link js-navigate-link">Почему мы?</a>
+      <a href="#team" class="header__link js-navigate-link">Команда</a>
+      <!-- <a href="#reviews" class="header__link js-navigate-link">Отзывы</a> -->
+      <a href="#contacts" class="header__link js-navigate-link">Контакты</a>
     </div>
     <div class="header__mobile-wrapper netbook-visible">
       <div class="header__mobile-wrapper-top">
@@ -17,19 +17,19 @@
         <img src="./img/mobile-header-right.svg" />
       </div>
       <div class="header__mobile-wrapper-nav">
-        <a href="#start" class="header__link">Начало</a>
-        <a href="#about" class="header__link">О нас</a>
-        <a href="#services" class="header__link">Услуги</a>
-        <a href="#technology" class="header__link">Технологии</a>
-        <a href="#why" class="header__link">Почему мы?</a>
-        <a href="#team" class="header__link">Команда</a>
-        <a href="#reviews" class="header__link">Отзывы</a>
-        <a href="#contacts" class="header__link">Контакты</a>
+        <a href="#start" class="header__link js-navigate-link">Начало</a>
+        <a href="#about" class="header__link js-navigate-link">О нас</a>
+        <a href="#services" class="header__link js-navigate-link">Услуги</a>
+        <a href="#technology" class="header__link js-navigate-link">Технологии</a>
+        <a href="#why" class="header__link js-navigate-link">Почему мы?</a>
+        <a href="#team" class="header__link js-navigate-link">Команда</a>
+        <!-- <a href="#reviews" class="header__link js-navigate-link">Отзывы</a> -->
+        <a href="#contacts" class="header__link js-navigate-link">Контакты</a>
         <div class="header__mobile-wrapper-box">
           <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
           <a href="+7(925)470-23-62" class="header__link">+7(925)470-23-62</a>
-          <a href="https://t.me/" class="is-underline-in">telegram</a>
-          <a href="https://wa.me/" class="is-underline-in">whatsapp</a>
+          <a href="https://t.me/gapdev_ru" class="is-underline-in">telegram</a>
+          <!-- <a href="https://wa.me/" class="is-underline-in">whatsapp</a> -->
         </div>
       </div>
     </div>
