--- a/src/blocks/modules/team-section/team-section.html
+++ b/src/blocks/modules/team-section/team-section.html
@@ -7,7 +7,7 @@
       </div>
     </div>
 
-    <div>
+    <!-- <div>
       <div>
         <a href="https://www.youtube.com/watch?v=sFnvkyjIBdg" data-fancybox="video" class="team-section__video">
           <img src="./img/video-poster.jpg" class="fit-cover" />
@@ -31,7 +31,7 @@
           </div>
         </a>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="team-section__footer container">
     <div class="team-section__footer-text sub20">
