--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -10,9 +10,13 @@
             <input type="text" class="input" placeholder=" " />
             <div class="form-input__placeholder">Имя</div>
           </label>
-          <label class="form-input is-required">
+          <label class="form-input is-required phone-input">
             <input type="text" class="input" placeholder=" " data-maska />
             <div class="form-input__placeholder">Телефон</div>
+            <div class="phone-input__mask-switch">
+              <div class="phone-input__mask-switch-current"></div>
+              <div class="phone-input__mask-switch-dropdown"></div>
+            </div>
           </label>
           <label class="form-input">
             <input type="text" class="input" placeholder=" " />
