--- a/src/blocks/modules/popups/popups.html
+++ b/src/blocks/modules/popups/popups.html
@@ -3,10 +3,10 @@
     <div class="popup__inner">
       <div class="popup__close js-close-popup">
         <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect width="42" height="42" rx="6" fill="white"/>
-          <path d="M16 16L26 26" stroke="black"/>
-          <path d="M26 16L16 26" stroke="black"/>
-        </svg>          
+          <rect width="42" height="42" rx="6" fill="white" />
+          <path d="M16 16L26 26" stroke="black" />
+          <path d="M26 16L16 26" stroke="black" />
+        </svg>
       </div>
       <div class="popup__content">
         <div class="popup__form-container">
@@ -15,9 +15,13 @@
               <input type="text" class="input" placeholder=" " />
               <div class="form-input__placeholder">Имя</div>
             </label>
-            <label class="form-input is-required">
+            <label class="form-input is-required phone-input">
               <input type="text" class="input" placeholder=" " />
               <div class="form-input__placeholder">Телефон</div>
+              <div class="phone-input__mask-switch">
+                <div class="phone-input__mask-switch-current"></div>
+                <div class="phone-input__mask-switch-dropdown"></div>
+              </div>
             </label>
             <label class="form-input">
               <input type="text" class="input" placeholder=" " />
