--- a/src/blocks/modules/company-section/company-section.html
+++ b/src/blocks/modules/company-section/company-section.html
@@ -43,7 +43,7 @@
           </div>
           <div class="company-section__content-box is-large">
             <div class="company-section__content-box-title">
-              <div class="company-section__content-box-btn">/ <span>Наща цель</span> /</div>
+              <div class="company-section__content-box-btn">/ <span>Наша цель</span> /</div>
 
               <span>
                 <svg
