--- a/src/blocks/modules/head/head.html
+++ b/src/blocks/modules/head/head.html
@@ -35,5 +35,5 @@
   <link rel="stylesheet" href="./styles/fancybox-5.0.min.css" />
   <link rel="stylesheet" href="./styles/swiper.min.css" />
 
-  <link rel="stylesheet" href="./styles/styles.css" />
+  <link rel="stylesheet" href="./styles/styles.css?v=2" />
 </head>
