--- a/src/blocks/modules/popups/popups.html
+++ b/src/blocks/modules/popups/popups.html
@@ -10,20 +10,20 @@
       </div>
       <div class="popup__content">
         <div class="popup__form-container">
-          <form action="#" class="callback-form">
+          <form action="#" class="callback-form js-validate-form">
             <label class="form-input is-required">
               <input type="text" class="input" placeholder=" " />
               <div class="form-input__placeholder">Имя</div>
             </label>
-            <label class="form-input is-required phone-input">
-              <input type="text" class="input" placeholder=" " />
+            <label class="form-input is-required is-phone phone-input">
+              <input type="text" class="input" placeholder=" " data-maska />
               <div class="form-input__placeholder">Телефон</div>
               <div class="phone-input__mask-switch">
                 <div class="phone-input__mask-switch-current"></div>
                 <div class="phone-input__mask-switch-dropdown"></div>
               </div>
             </label>
-            <label class="form-input">
+            <label class="form-input is-email">
               <input type="text" class="input" placeholder=" " />
               <div class="form-input__placeholder">Почта</div>
             </label>
@@ -39,8 +39,8 @@
                 </div>
               </div>
             </label>
-            <label class="checkbox-input">
-              <input type="checkbox" name="privacy" />
+            <label class="form-input is-required is-checkbox checkbox-input">
+              <input type="checkbox" name="privacy" class="input" />
               <div class="checkbox-input__check">
                 <div class="checkbox-input__check-icon">
                   <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
