--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -56,6 +56,7 @@
         <img src="./img/footer-logo.svg" alt="gap-dev" class="footer__logo tablet-hidden"/>
         <div class="footer__contacts-box">
           <a href="mailto:gapdev@gapdev.ru" class="is-underline-in">gapdev@gapdev.ru</a>
+          <a href="tel:+7(985)219-84-43" class="is-underline-in">+7(985)219-84-43</a>
           <a href="tel:+79254702362" class="is-underline-in">+7(925)470-23-62</a>
           <a href="https://t.me/gapdev_ru" class="is-underline-in">Telegram</a>
           <!-- <a href="https://wa.me/" class="is-underline-in">Whatsapp</a> -->
@@ -65,7 +66,7 @@
           <a href="#mobile-development-service" class="is-underline-in js-navigate-link" data-header-offset="true">Разработка мобильных приложений</a>
           <a href="#it-consulting-service" class="is-underline-in js-navigate-link" data-header-offset="true">IT-consulting</a>
         </div class="footer__contacts-box">
-        <div class="footer__contacts-box">© GAPDEV 2024</div>
+        <div class="footer__contacts-box">© GAPDEV 2025</div>
       </div>
     </div>
   </div>
