--- a/src/blocks/modules/header/header-cases.html
+++ b/src/blocks/modules/header/header-cases.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header--case">
   <div class="container">
     <div class="header__wrapper netbook-hidden">
       <a href="/" class="header__link">[ gapdev.ru ]</a>
