--- a/src/blocks/modules/reviews-section/reviews-section.html
+++ b/src/blocks/modules/reviews-section/reviews-section.html
@@ -7,181 +7,65 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="review-card">
-                <div>
-                  <div class="review-card__top">
-                    <div class="review-card__avatar">
-                      <img src="./img/reviews-face.png" class="fit-cover" />
-                    </div>
-                    <div class="review-card__data-container">
-                      <div class="review-card__name">Андрей Заборов</div>
-                      <div class="review-card__position">miniCEO очередной хуйни</div>
-                    </div>
+                <div class="review-card__top">
+                  <div class="review-card__avatar">
+                    <img src="./img/cases/kig/kig-review-logo.png" />
                   </div>
-                  <div class="review-card__content sub20">
-                    <p>
-                      У нас остались исключительно положительные впечатления от работы. Все красиво и понятно, работать
-                      легко и интересно с сайтом. Специалисты агентства быстро реагировали на вопросы и пожелания.
-                    </p>
-                    <br />
-                    <p>
-                      Также помогли с наполнением, внесли необходимые корректировки, поняв "с полуслова" что нужно
-                      изменить.
-                    </p>
+                  <div class="review-card__data-container">
+                    <div class="review-card__name">Дмитрий Зинчук</div>
+                    <div class="review-card__position">Генеральный директор ООО “КИГ”</div>
                   </div>
                 </div>
-
-                <div class="review-card__logo">
-                  <img src="./img/company-logo.png" />
+                <div class="review-card__content">
+                  <p>
+                    Хочу сказать спасибо команде GapDev за проделанную работу над нашим сайтом. Вы очень профессионально
+                    и креативно подошли к работе, благодаря чему получился отличный проект. Во время работы вы учли все
+                    наши пожелания и предложили свои отличные идеи, что позволило сделать сайт не просто красивым, а
+                    очень функциональным и удобным для пользователей.
+                  </p>
+                  <br />
+                  <p>
+                    Вы очень внимательно подходите к деталям, умеете быстро решать любые проблемы. Мы очень ценим наше
+                    сотрудничество и нацелены на дальнейшую активную работу по развитию проекта! Рекомендую вас, как
+                    надежного партнера в сфере IT технологий.
+                  </p>
+                  <br />
+                  <a href="/docs/KIG001.pdf" target="_blank" class="review-card__link">Посмотреть отзыв</a>
                 </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="review-card">
-                <div>
-                  <div class="review-card__top">
-                    <div class="review-card__avatar">
-                      <img src="./img/reviews-face.png" class="fit-cover" />
-                    </div>
-                    <div class="review-card__data-container">
-                      <div class="review-card__name">Андрей Заборов</div>
-                      <div class="review-card__position">miniCEO очередной хуйни</div>
-                    </div>
-                  </div>
-                  <div class="review-card__content sub20">
-                    <p>
-                      У нас остались исключительно положительные впечатления от работы. Все красиво и понятно, работать
-                      легко и интересно с сайтом. Специалисты агентства быстро реагировали на вопросы и пожелания.
-                    </p>
-                    <br />
-                    <p>
-                      Также помогли с наполнением, внесли необходимые корректировки, поняв "с полуслова" что нужно
-                      изменить.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="review-card__logo">
-                  <img src="./img/company-logo.png" />
+                <div class="review-card__footer">
+                  <a href="/cases-kig.html" class="button is-ghost">Подробнее о проекте</a>
                 </div>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="review-card">
-                <div>
-                  <div class="review-card__top">
-                    <div class="review-card__avatar">
-                      <img src="./img/reviews-face.png" class="fit-cover" />
-                    </div>
-                    <div class="review-card__data-container">
-                      <div class="review-card__name">Андрей Заборов</div>
-                      <div class="review-card__position">miniCEO очередной хуйни</div>
-                    </div>
+                <div class="review-card__top">
+                  <div class="review-card__avatar">
+                    <img src="./img/cases/linimax/linimax-review-logo.png" />
                   </div>
-                  <div class="review-card__content sub20">
-                    <p>
-                      У нас остались исключительно положительные впечатления от работы. Все красиво и понятно, работать
-                      легко и интересно с сайтом. Специалисты агентства быстро реагировали на вопросы и пожелания.
-                    </p>
-                    <br />
-                    <p>
-                      Также помогли с наполнением, внесли необходимые корректировки, поняв "с полуслова" что нужно
-                      изменить.
-                    </p>
+                  <div class="review-card__data-container">
+                    <div class="review-card__name">Дмитрий Давыдов</div>
+                    <div class="review-card__position">Генеральный директор ООО "ЛИННИМАКС РУС"</div>
                   </div>
                 </div>
-
-                <div class="review-card__logo">
-                  <img src="./img/company-logo.png" />
+                <div class="review-card__content">
+                  <p>
+                    Я рад поделиться своим положительным опытом сотрудничества с командой разработки сайта для компании
+                    LINNIMAX. Их профессионализм и креативный подход позволили создать современный и функциональный
+                    ресурс. Они провели с нами много встреч, чтобы понять наши потребности и пожелания. Это помогло им
+                    создать сайт, который полностью соответствует нашему видению.
+                  </p>
+                  <br />
+                  <p>
+                    Процесс разработки построен очень прозрачно. Мы получали регулярные обновления о ходе работы, а
+                    также была возможность вносить небольшие изменения на каждом этапе, что шло на пользу общему
+                    результату.
+                  </p>
+                  <br />
+                  <a href="/docs/LINNIMAX.pdf" target="_blank" class="review-card__link">Посмотреть отзыв</a>
                 </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="review-card">
-                <div>
-                  <div class="review-card__top">
-                    <div class="review-card__avatar">
-                      <img src="./img/reviews-face.png" class="fit-cover" />
-                    </div>
-                    <div class="review-card__data-container">
-                      <div class="review-card__name">Андрей Заборов</div>
-                      <div class="review-card__position">miniCEO очередной хуйни</div>
-                    </div>
-                  </div>
-                  <div class="review-card__content sub20">
-                    <p>
-                      У нас остались исключительно положительные впечатления от работы. Все красиво и понятно, работать
-                      легко и интересно с сайтом. Специалисты агентства быстро реагировали на вопросы и пожелания.
-                    </p>
-                    <br />
-                    <p>
-                      Также помогли с наполнением, внесли необходимые корректировки, поняв "с полуслова" что нужно
-                      изменить.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="review-card__logo">
-                  <img src="./img/company-logo.png" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="review-card">
-                <div>
-                  <div class="review-card__top">
-                    <div class="review-card__avatar">
-                      <img src="./img/reviews-face.png" class="fit-cover" />
-                    </div>
-                    <div class="review-card__data-container">
-                      <div class="review-card__name">Андрей Заборов</div>
-                      <div class="review-card__position">miniCEO очередной хуйни</div>
-                    </div>
-                  </div>
-                  <div class="review-card__content sub20">
-                    <p>
-                      У нас остались исключительно положительные впечатления от работы. Все красиво и понятно, работать
-                      легко и интересно с сайтом. Специалисты агентства быстро реагировали на вопросы и пожелания.
-                    </p>
-                    <br />
-                    <p>
-                      Также помогли с наполнением, внесли необходимые корректировки, поняв "с полуслова" что нужно
-                      изменить.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="review-card__logo">
-                  <img src="./img/company-logo.png" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="review-card">
-                <div>
-                  <div class="review-card__top">
-                    <div class="review-card__avatar">
-                      <img src="./img/reviews-face.png" class="fit-cover" />
-                    </div>
-                    <div class="review-card__data-container">
-                      <div class="review-card__name">Андрей Заборов</div>
-                      <div class="review-card__position">miniCEO очередной хуйни</div>
-                    </div>
-                  </div>
-                  <div class="review-card__content sub20">
-                    <p>
-                      У нас остались исключительно положительные впечатления от работы. Все красиво и понятно, работать
-                      легко и интересно с сайтом. Специалисты агентства быстро реагировали на вопросы и пожелания.
-                    </p>
-                    <br />
-                    <p>
-                      Также помогли с наполнением, внесли необходимые корректировки, поняв "с полуслова" что нужно
-                      изменить.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="review-card__logo">
-                  <img src="./img/company-logo.png" />
+                <div class="review-card__footer">
+                  <a href="/cases-linimax.html" class="button is-ghost">Подробнее о проекте</a>
                 </div>
               </div>
             </div>
